  -------  ----------------------  ----------------------  -------
  14.1.1   E key                   pitch                   14.1.1 + 6 months
  14.1.1   E pan                   ~= mixer/remix          14.1.1 + 6 months

File formats:

  o Fix WAV write on 64-bit arch.  (robs)
  o Fix writing PRC ADPCM files.  (Silas Brown)

Effects:

  o New `riaa' effect; RIAA vinyl playback EQ.  (robs)
  o New -b option for the norm effect; can be used to fix stereo
    imbalance.  (robs)
  o Change default settings for `rate' effect; add -s -L options to
    be compatible with SoX v14.1.0; phase response, band-width and
    aliasing now configurable; see man page for details.  (robs)
  o Fix broken audio pass-through with noiseprof effect.  (robs)
  o Improved documentation for the `stat' effect.  (robs)
  o New --effects-file option to read effects and arguments from
    a file instead of command line. (cbagwell)

Other new features:

  o New --output option to write to multiple files in one run.
    Only useful with certain effects like trim and silence. (cbagwell)
  o Display SoX build environment information with -V -V.  (robs)

Other bug fixes:

  o Bump library version because it was not binary compatible with
    SoX 14.0.1 (Pascal Giard)
  o Turn off versioning of special libsox_fmt* libraries since thats
    not really needed.  (kwizart)
  o Fixed crash when running play with no arguments. (Dan Nelson)
  o Allow libpng to be found with -static option. (cbagwell)
  o Allow libsamplerate to be found if pkg-config is installed but
    no samplerate.pc exists. (cbagwell)
  o [2038855] external lpc10 lib patch.  (Oden Eriksson, Mandriva)
  o Fix memory leaks in effects chain when restarting effects.
  o Fixed pkg-config CFLAGS. (evilynux)

Internal improvements:

  o Fixed all compiler warnings (with gcc 4.3.1, 64-bit arch.).  (robs)
  o Updates to internal effects chain API.  (cbagwell)
  o Retire old FFT routines (speeds up noisered effect).  (robs)