@@ -252,7 +252,7 @@ libsfx_la_SOURCES = \
 	band.h biquad.c biquad.h biquads.c chorus.c compand.c compandt.c \
 	compandt.h contrast.c dcshift.c delay.c dither.c earwax.c echo.c \
 	echos.c effects.c effects.h effects_i.c fade.c fft4g.c fft4g.h \
-	fifo.h filter.c flanger.c input.c ladspa.c mcompand.c \
+	fifo.h filter.c flanger.c input.c ladspa.c loudness.c mcompand.c \
 	mixer.c noiseprof.c noisered.c noisered.h normalise.c output.c pad.c \
 	pan.c phaser.c pitch.c polyphas.c rabbit.c rate.c \
 	rate_filters.h rate_half_fir.h rate_poly_fir0.h rate_poly_fir.h \
